<resources>
    <string name="app_name">Crypto6300</string>
    <string name="welcome">Welcome to Decipher Expert !</string>
    <string name="submitButton">SUBMIT</string>
    <string name="cancelButton">CANCEL</string>
    <string name="registerButton">REGISTER</string>
    <string name="loginButton">LOGIN</string>
    <string name="loginTitle">User Login</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="usernameHint">Enter your username:</string>
    <string name="emailHint">Enter your email:</string>
    <string name="registrationTitle">New User Registration</string>
    <string name="createTitle">Create New Cryptogram</string>
    <string name="title">Title:</string>
    <string name="solution">Solution:</string>
    <string name="titleHint">Enter title:</string>
    <string name="solutionHint">Enter solution:</string>
    <string name="HintHint">Enter hint:</string>
    <string name="uniqueLetters">Unique letters you input:</string>
    <string name="encrypt">encrypts</string>
    <string name="addLetter">Add Letter</string>
    <string name="resultingPhrase">Resulting Phrase:</string>
    <string name="createButton">CREATE</string>
    <string name="placeHolder_hello">(Hello, shuang379!)</string>
    <string name="logoutButton">LOG OUT</string>
    <string name="viewScoreButton">View Scores</string>
    <string name="solveButton">SOLVE CRYPTOGRAM</string>
    <string name="createCryptButton">CREAT CRYPTOGRAM</string>
    <string name="viewStatButton">View Statistics</string>
    <string name="placeHolder_title">Title of the Cryptogram</string>
    <string name="placeHolder_solution">(Click button to see conversion)</string>
    <string name="potentialSolution">Potential Solution:</string>
    <string name="placeHolder_remaining">Remaining Attempts: 4</string>
    <string name="placeHolder_decipher">(Sya)</string>
    <string name="returnButton">RETURN</string>
    <string name="parseButton_create">PARSE to unique LETTERS</string>
    <string name="enterLetters">Enter encoded letters: \n (separated by commas)</string>
    <string name="enterEncodedHint">Enter encoded letters</string>
    <string name="enterUncoded">Enter uncoded letters</string>
    <string name="viewButton">View resulting phrase</string>
    <string name="viewButton_solve">View potential solution</string>
    <string name="hint">Hint:</string>
    <string name="enterBet">Enter your bet points</string>
    <string name="playerScores">Player Scores</string>
    <string name="Username">Username</string>
    <string name="Attempted">Attempted</string>
    <string name="score">Score</string>
    <string name="encryptedPhrase">Encrypted Phrase:</string>
    <string name="solutionPhrase">Solution Phrase:</string>
    <string name="disableButton">DISABLE</string>

</resources>
