<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolveCryptogramActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_cryptoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text="@string/placeHolder_title"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txt_remAttempts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text="@string/placeHolder_remaining"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_encodedPhrase"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center|center_horizontal"
            android:text="@string/placeHolder_decipher"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorAccent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_parseSolve"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/parseButton_create"
            android:textColorLink="@color/colorAccent"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_uniqueSolve"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:hint="Click button to parse"
            android:textColorLink="@color/colorAccent"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txt_encodedMap"
            android:layout_width="393dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/enterUncoded"
            android:inputType="textPersonName"
            android:textColorLink="@color/colorAccent"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_viewPotentialSln"
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/viewButton_solve"
            android:textColorLink="@color/colorAccent"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_potentialSoln"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:hint="Click button to see conversion"
            android:textColorLink="@color/colorAccent"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitButtonID_solve"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/submitButton"
                android:textColorLink="@color/colorAccent"
                android:textSize="12sp" />

            <Button
                android:id="@+id/cancelButtonID_solve"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/cancelButton"
                android:textColorLink="@color/colorAccent"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Score:    "
                    android:textColorLink="@color/colorAccent" />

                <TextView
                    android:id="@+id/lbl_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[Unknown]"
                    android:textColorLink="@color/colorAccent" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hint:    "
                android:textColorLink="@color/colorAccent" />

            <TextView
                android:id="@+id/lbl_hintSolve"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="[Not yet visible]"
                android:textColorLink="@color/colorAccent" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>